--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
   text-align: "center";
 }
 .typewriting{
-  margin-top:1em;
-  font-size: 80px;
+  /* margin-top: 3em; */
+  margin-top:1.5em;
+  font-size: 50px;
   color: rgb(205, 236, 91);
 }
 .typewriting2{
@@ -92,22 +93,4 @@
 }
 #error{
   color: #FF2625;
-}
-.menu{
-  border-radius: 25px;
-  border: 0.1px solid #099FFF;
-  background-color: #181818;
-  box-shadow: 0 4px 8px 0 #00FFFF, 0 6px 20px 0 rgb(0, 0, 0, 0.19);
-}
-.t{
-  margin: auto;
-  color: #000;
-  font-size: 34px;
-  cursor:pointer;
-}
-.t:after{
-  display: block;
-}
-.t:hover:after{
-  transform:scaleX(1);
 }
