--- a/src/App.css
+++ b/src/App.css
@@ -93,4 +93,38 @@
 }
 #error{
   color: #FF2625;
+  border: 1px solid #FF2625;
+  padding: 6px;
+  background-color: #f39a9a;
+  margin-top: 2px;
+
+  /* border-radius: 1px solid #FF2625; */
+}
+.circularProgress{
+  /* position: relative; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 45%;
+  margin-top: 40%;
+}
+
+
+.places-container {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+  width: 300px;
+}
+
+.map-container {
+  width: 100%;
+  height: 100vh;
+}
+
+.combobox-input {
+  width: 100%;
+  padding: 0.5rem;
 }
