--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,16 @@
   background-image:url('./asset/food2.png');
   background-size: cover;
   width: '100%';
-  height: "100vh";
+  height: "auto";
   color: "#f5f5f5";
   margin-top: "3em";
   text-align: "center";
 }
+@media only screen and (max-width: 480px) {
+  .bg_Image  {
+  width: 100%;
+  }
+  }
 .typewriting{
   /* margin-top: 3em; */
   margin-top:1.5em;
